--- a/REUSE.toml
+++ b/REUSE.toml
@@ -4,3 +4,7 @@ version = 1
 path = "**/*"
 SPDX-FileCopyrightText = "2025 Marc Bernard <https://marcbernardtools.com/>"
 SPDX-License-Identifier = "MIT"
+
+path = "**/zabapgit_test_ssl.*"
+SPDX-FileCopyrightText = "2014 abapGit Contributors <https://abapgit.org>"
+SPDX-License-Identifier = "MIT"
